# daggerheart-campaign-manager

./: .gitignore  LICENSE  README.md  docker-compose.yml
.claude/: CLAUDE.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_app_settings.py  0002_users_invites.py  0003_campaigns_sessions.py  0004_chat_messages.py  0005_player_area.py
backend/app/: db.py  deps.py  main.py  roles.py  security.py
backend/app/data/srd/: character_creation.json
backend/app/models/: __init__.py
backend/app/routers/: auth.py  campaigns.py  chat.py  database.py  health.py  player.py  settings.py  srd.py  ws.py
backend/app/schemas/: auth.py  campaigns.py  character_sheet.py  chat.py  player.py  settings.py
backend/app/services/: srd.py
backend/app/ws/: manager.py  messages.py
backend/tests/: conftest.py  test_api_database.py  test_api_srd.py  test_auth.py  test_campaigns.py  test_character_sheet.py  test_chat_history.py  test_chat_ws.py  test_player.py  test_settings.py  test_ws_manager.py  test_ws_route.py
design/: Daggerheart Campaign Manager.dc.html  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: campaigns.ts  chat.ts  client.ts  database.ts  player.ts  srd.ts
frontend/src/components/: ChatPanel.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AppSettingsContext.tsx  AuthContext.tsx
frontend/src/hooks/: useWebSocket.ts
(+21 files in other folders)
